--- a/content.html
+++ b/content.html
@@ -3,36 +3,31 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Content Page</title>
+<title>Gallery Page</title>
 <style>
-  body { font-family: Arial, sans-serif; }
+  body {
+    font-family: Arial, sans-serif;
+  }
   .image-container {
     text-align: center;
-    margin-top: 20px;
+    padding: 20px;
   }
-  .image-container img {
-    width: 80%;
-    margin-bottom: 20px;
-  }
-  .button-container {
-    text-align: center;
-    margin-top: 20px;
+  img {
+    width: 100%;
+    max-width: 500px;
+    margin: 10px 0;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
   }
 </style>
 </head>
 <body>
 
 <div class="image-container">
-  <!-- Assuming the image files are in the same directory as your content.html -->
-  <img src="_51b220f3-2782-4c56-89c5-554f4e46f185.jpg" alt="AI Generated Image 1">
-  <img src="_94622b06-3b0f-43a1-bb4a-7a60c384576f.jpg" alt="AI Generated Image 2">
-  <img src="_9f50d79b-50ea-4c11-9eaa-3332a77d050a.jpg" alt="AI Generated Image 3">
-  <img src="_8d19ad02-3dd2-4bde-8021-85d8576fb7ba.jpg" alt="AI Generated Image 4">
-</div>
-
-<div class="button-container">
-  <!-- Button to go back to index.html -->
-  <button onclick="window.location.href='index.html'">Back to Home</button>
+  <img src="_a66b36e6-be78-4f4e-b3b6-c6293638a601.jpg" alt="Image 1">
+  <img src="_94622b06-3b0f-43a1-bb4a-7a60c384576f.jpg" alt="Image 2">
+  <img src="_8d19ad02-3dd2-4bde-8021-85d8576fb7ba.jpg" alt="Image 3">
+  <img src="DALL·E 2024-02-27 16.37.57 - A vibrant and detailed painting showcasing a panoramic view of Seattle. The composition features the iconic Space Needle in the foreground, with the G.webp" alt="Image 4">
 </div>
 
 </body>
