--- a/content.html
+++ b/content.html
@@ -3,19 +3,22 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Gallery Page</title>
+<title>Image Gallery</title>
 <style>
   body {
     font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
   }
   .image-container {
-    text-align: center;
     padding: 20px;
+    text-align: center;
   }
   img {
-    width: 100%;
-    max-width: 500px;
-    margin: 10px 0;
+    max-width: 90%;
+    height: auto;
+    margin-bottom: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
   }
@@ -24,10 +27,9 @@
 <body>
 
 <div class="image-container">
-  <img src="_a66b36e6-be78-4f4e-b3b6-c6293638a601.jpg" alt="Image 1">
-  <img src="_94622b06-3b0f-43a1-bb4a-7a60c384576f.jpg" alt="Image 2">
-  <img src="_8d19ad02-3dd2-4bde-8021-85d8576fb7ba.jpg" alt="Image 3">
-  <img src="DALL·E 2024-02-27 16.37.57 - A vibrant and detailed painting showcasing a panoramic view of Seattle. The composition features the iconic Space Needle in the foreground, with the G.webp" alt="Image 4">
+  <img src="https://www.bing.com/images/create/gas-works-seattle/1-65de7e8a823c47768a626050a94ca7e3?id=G7%2bAymQfvF0Wz0r2OtZ06g%3d%3d&view=detailv2&idpp=genimg&thId=OIG2.ALiM9h0VSKm_hMc8waWL&FORM=GCRIDP&mode=overlay" alt="Gas Works Park, Seattle">
+  <img src="https://www.bing.com/images/create/rainier/1-65de7dff74fc42369a68a816914ac133?id=%2bMzu0Bt8AuW0OzYt%2bN%2bOHQ%3d%3d&view=detailv2&idpp=genimg&thId=OIG4.mtuqHNWCTsQPAujbOD0N&FORM=GCRIDP&mode=overlay" alt="Mount Rainier">
+  <img src="https://www.bing.com/images/create/space-needle/1-65de7e2b868041f291190b6c78186331?id=VpLKLQS6mn5two98WeH2Pw%3d%3d&view=detailv2&idpp=genimg&thId=OIG1.apFZ2COgrtqE11CBNgUY&FORM=GCRIDP&mode=overlay" alt="Space Needle, Seattle">
 </div>
 
 </body>
